overflow x not working on mobile, an attempt to fix it in the body tag

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,8 @@ body {
     color: var(--primary-color-blue);
     box-sizing: border-box;
     background: rgba(220,231,250, .1);
-    max-width: 100%;
+    overflow-x: hidden;
+
 }
 
 *,
